Tools/editors/tree-sitter/grammar.js
    source_file: ($) => seq(optional($.inline_package), repeat($._item)),

    // ── Applied rules (D-SHAPE2, D-ATTR1/2/3, D-CASING1) ──────────────────
    // `#Rule`, `#Rule(args)`, and `#[Rule, Rule(args)]` bracket lists.
    _marker: ($) => choice($.attribute, $.attribute_list),

    marker_name: (_) => /[A-Z][a-zA-Z0-9_]*/,

    // Lowercase applied rules use the same `@` sigil.
    _lower_marker: ($) =>
      prec.right(
        seq("@", field("name", $.lower_marker_name), optional($.marker_args)),
      ),

    _item: ($) =>
      choice(
        $.test_block,
        $.derive_stmt,
        $.function_def,
        $.struct_def,
        $.enum_def,
        $.impl_block,
        $.trait_def,
        $.tag_def,
        $.distinct_def,
        $.alias_def,
        $.comptime_stmt,
        $.use_stmt,
        $.module_def,
        $.extern_block,
        $.marker_decl,
        $.migration_block,
        $.config_field,
      ),

    // D-ECO-INLINEPACKAGE1=A: the carrier is contextual source structure.
    // PackageFacts owns its field grammar; tree-sitter only recognizes the
    // balanced record shell so editor spans remain intact.
    marker_decl: ($) =>
      seq(
        "marker",
        field("name", $.marker_name),
        $.marker_decl_params,
        optional($.derive_body),
      ),

    marker_decl_params: ($) => seq("(", commaSep($.marker_decl_param), ")"),

    marker_decl_param: ($) =>
      choice(
        seq(field("name", $.marker_fact_name), ":", $._expr),
        seq(
          field("name", $.identifier),
          ":",
          optional("..."),
          field("type", $._type),
          optional(seq("{", field("default", $._expr), "}")),
        ),
      ),

    marker_fact_name: ($) => seq("@", $.identifier),

    // ── Use (S16, D-MOD3) ────────────────────────────────────────────────────
    // `use core.encoding.json as json`, `use "./file.jet"`, or a member list
    // `use math.[double, triple]`.
    function_def: ($) =>
      seq(
        repeat(choice($._marker, $._lower_marker)),
        optional("pub"),
        "fn",
        field("name", choice($.identifier, $.type_identifier, $.compiler_fact)),
        optional($.type_params),
        $.param_list,
        optional(choice(
          seq(
            field("return_type", $._type),
            optional($.effect_arrow),
          ),
          $.effect_arrow,
        )),
        choice(seq("->", field("body", choice($.block, $._expr))), $.block),
      ),

    // ── Struct definition ──────────────────────────────────────────────────
    type_params: ($) => seq("<", commaSep1($.type_param), ">"),

    type_param: ($) =>
      seq(
        $.type_identifier,
        optional(
          seq(
            ":",
            choice(
              $.quantity_bound,
              seq(
                $.type_identifier,
                repeat(seq("+", $.type_identifier)),
              ),
            ),
          ),
        ),
      ),

    quantity_bound: ($) =>
      seq(
        "Quantity",
        token.immediate("<"),
        field("dimension", $.type_identifier),
        ",",
        ".",
        field("kind", choice("Linear", "Point", "Delta")),
        ">",
      ),

    // ── Param list ─────────────────────────────────────────────────────────
    param_list: ($) => seq("(", commaSep(choice($.self_param, $.param)), ")"),

    // Receiver: `self`, `^self`, `&self` (D-MEM1).
    _type: ($) =>
      choice(
        $.capability_type,
        $.union_type,
        $.primitive_type,
        $.generic_type,
        $.compiler_fact,
        $.type_identifier,
        $.option_type,
        $.fallible_type,
        $.list_type,
        $.map_type,
        $.fn_type,
        $.tuple_type,
        $.paren_type,
      ),

    // `(T, U)` or named `(max: Int, min: Int)` tuple type. At least one named
    // element or two elements, so a single `(T)` stays a `paren_type`.
    primitive_type: (_) =>
      choice(
        "Int",
        "Float",
        "Bool",
        "String",
        "Char",
        "()",
        "Err",
        "I8",
        "I16",
        "I32",
        "I64",
        "U8",
        "U16",
        "U32",
        "U64",
        "F32",
        "F64",
      ),

    type_identifier: (_) => /[A-Z][a-zA-Z0-9_]*/,

    // Generics: `Pair<T>`, `Stack<Int>`. The `<` is adjacent (no space) so a
    // spaced `T < x` in expression position stays a comparison.
    block: ($) => seq("{", repeat($._stmt), "}"),

    _stmt: ($) =>
      choice(
        $.bind_stmt,
        $.assign_stmt,
        $.defer_close_stmt,
        $.return_stmt,
        $.break_stmt,
        $.next_stmt,
        $.loop_stmt,
        $.comptime_stmt,
        $.comptime_if_stmt,
        $.region_stmt,
        $.live_stmt,
        $.marker_block_stmt,
        $.expr_stmt,
      ),

    // A rule-introduced block: `#FX(IO) { … }` (D-EFF1),
    // named `#FX(grant: FS) { … }` (D-ABILITY-NAME2), `#Transact(order) { … }` (D-TXN4).
    bind_stmt: ($) =>
      seq(
        field(
          "name",
          choice(
            $.identifier,
            $.type_identifier,
            $.list_pattern,
            $.tuple_pattern,
          ),
        ),
        choice("::", ":="),
        field("value", $._expr),
      ),

    // Destructuring bind targets: `[a, b, c] :: …`, `(a, b) :: …`.
    expr_stmt: ($) => seq($._expr),

    // ── Expressions ────────────────────────────────────────────────────────
    _expr: ($) =>
      choice(
        $.integer_literal,
        $.float_literal,
        $.boolean_literal,
        $.null_literal,
        $.ok_err_literal,
        $.multiline_string,
        $.string_literal,
        $.char_literal,
        $.compiler_fact,
        $.identifier,
        $.typed_literal,
        $.type_identifier,
        $.copy_expr,
        $.primitive_type,
        $.task_selector_expr,
        $.task_expr,
        $.call_expr,
        $.turbofish_call,
        $.build_recipe_expr,
        $.struct_literal,
        $.list_literal,
        $.map_literal,
        $.tuple_expr,
        $.method_call_expr,
        $.field_expr,
        $.deref_expr,
        $.member_spread_expr,
        $.lambda_expr,
        $.binary_expr,
        $.unary_expr,
        $.capability_expr,
        $.result_handler_expr,
        $.try_expr,
        $.paren_expr,
        $.index_expr,
        $.range_expr,
        $.if_expr,
        $.marked_expr,
        $.generic_access,
        $.source_ref,
      ),

    // A `target@source` dependency ref (D-JPK-REF1, S59): `tool@github`,
    // `owner/repo#version=1.2.3@github`, or `acme/tool@vendor`.
    source_ref: ($) =>
      seq(
        field(
          "target",
          choice($.identifier, $.ref_path_target, $.ref_version_target),
        ),
        token.immediate("@"),
        field("source", choice($.string_literal, $.ref_target)),
      ),

    ref_path_target: ($) =>
      seq(
        choice($.identifier, $.type_identifier),
        repeat1(seq(token.immediate("/"), $.ref_segment)),
        optional($.ref_version_suffix),
      ),

    ref_version_suffix: ($) =>
      seq(token.immediate("#"), token.immediate(/[A-Za-z0-9_.=+-]+/)),

    ref_segment: (_) => token.immediate(/[A-Za-z0-9_.:-]+/),

    ref_target: (_) => token.immediate(/[A-Za-z0-9_./:-]+/),

    // A direct value-fact rule riding an expression: `#Input value`, or
    // a bare rule value such as the typed goal `#Todo` (D-TOOL2).
    integer_literal: (_) =>
      token(
        choice(
          /0x[0-9a-fA-F][0-9a-fA-F_]*/,
          /0o[0-7][0-7_]*/,
          /0b[01][01_]*/,
          /[0-9][0-9_]*/,
        ),
      ),
    boolean_literal: (_) => choice("true", "false"),
    string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice($.escape_sequence, $.string_interpolation, $._string_content),
        ),
        '"',
      ),

    // D-BOUND-RAW1=A: Type{"…"} bodies hand every slash to the literal grammar.
    // A slashed quote still belongs to the body; doubled braces stay literal.
    typed_literal_string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $.typed_literal_brace,
            $.typed_literal_slash,
            $.string_interpolation,
            $._string_content,
          ),
        ),
        '"',
      ),

    _string_content: (_) => token.immediate(prec(1, /[^"\\{}]+/)),

    identifier: (_) => /[a-z_][a-zA-Z0-9_]*/,

    // `name(args)`, `Type(args)` constructor / distinct wrap, and `Ok(x)`/`Err(e)`
    // result constructors (S34) which also appear as dispatch-arm patterns.
    call_expr: ($) =>
      prec(
        2,
        seq(
          field(
            "name",
            choice(
              $.identifier,
              $.type_identifier,
              $.primitive_type,
              $.ok_err_literal,
            ),
          ),
          $.arg_list,
        ),
      ),

    // D-CONC-FREEZE1=A: the task-only consuming capture surface. Ordinary
    // `task work()` remains the generic call form; this rule owns `task ^x`.
    build_recipe_expr: ($) =>
      prec(
        6,
        seq(
          "Recipe",
          ".",
          "build",
          "(",
          "steps",
          ":",
          "[",
          commaSep($.build_step_value),
          optional(","),
          "]",
          ")",
        ),
      ),

    build_step_value: ($) =>
      seq(
        ".",
        choice("fetch", "exec", "install", "install_tree"),
        optional($.build_step_args),
      ),

    build_step_args: ($) =>
      seq(
        "(",
        optional(
          seq(
            $.build_step_arg,
            repeat(seq(",", $.build_step_arg)),
            optional(","),
          ),
        ),
        ")",
      ),

    build_step_arg: ($) =>
      choice(
        seq(choice("url", "sha256", "tool", "src", "dest"), ":", $.string_literal),
        seq("args", ":", $.build_step_string_list),
      ),

    build_step_string_list: ($) =>
      seq("[", commaSep($.string_literal), optional(","), "]"),

    // Turbofish: `decode<Order>(raw)`, `make_pair<Int>(…)`. The `<` is adjacent
    // (no space) so a spaced comparison `c < 3` stays a `binary_expr`.
    arg_list: ($) =>
      seq(token.immediate("("), commaSep(choice($.named_arg, $._expr)), ")"),

    // `Type { field: value, … }` / `Type<T> { … }` struct literal. Negative
    // precedence so that after `if`/`loop`/`#Known if` the trailing `{ … }` is
    // taken as the block, not a struct literal on a bare type-name condition.
    // Fields are separated by commas or newlines (S6-R), so the comma is
    // optional between them.
    typed_literal: ($) =>
      prec.right(
        6,
        seq(
          field("head", $._type),
          "{",
          field(
            "body",
            optional(
              choice(
                $.typed_literal_string,
                $.typed_literal_multiline,
                commaSep1(
                  choice(
                    seq(field("field", $.identifier), ":", field("value", $._expr)),
                    $._expr,
                  ),
                ),
              ),
            ),
          ),
          "}",
        ),
      ),

    list_literal: ($) => seq("[", commaSep($._expr), "]"),

    // Map literal: `[:]` empty, or `[k: v, …]`.
    result_handler_expr: ($) =>
      prec.left(
        6,
        seq(
          field("subject", $._expr),
          "?",
          field("ok", $.identifier),
          "->",
          field("success", choice($.block, $._expr)),
          "!",
          field("error", $.identifier),
          "->",
          field("failure", choice($.block, $._expr)),
        ),
      ),
