Tools/editors/tree-sitter/test/corpus/build_recipe.txt
==================
Adapter build recipe
==================

fn run() {
    value :: Recipe.build(steps: [
        .fetch(url: "https://example.test/tool.tar", sha256: "sha256"),
        .exec(tool: "cc", args: ["-O2", "main.c",]),
        .install(src: "tool", dest: "bin/tool"),
        .install_tree(src: "share", dest: "share"),
    ])
}

---

(source_file
  (function_def
    (identifier)
    (param_list)
    (block
      (bind_stmt
        (identifier)
        (build_recipe_expr
          (build_step_value
            (build_step_args
              (build_step_arg
                (string_literal))
              (build_step_arg
                (string_literal))))
          (build_step_value
            (build_step_args
              (build_step_arg
                (string_literal))
              (build_step_arg
                (build_step_string_list
                  (string_literal)
                  (string_literal)))))
          (build_step_value
            (build_step_args
              (build_step_arg
                (string_literal))
              (build_step_arg
                (string_literal))))
          (build_step_value
            (build_step_args
              (build_step_arg
                (string_literal))
              (build_step_arg
                (string_literal)))))))))
