Tools/editors/tree-sitter/test/corpus/quantity_bound.txt
==================
Physical quantity generic bound
==================

fn keep<Q: Quantity<Length, .Linear>>() {}

---

(source_file
  (function_def
    (identifier)
    (type_params
      (type_param
        (type_identifier)
        (quantity_bound
          (type_identifier))))
    (param_list)
    (block)))
