Tools/editors/tree-sitter/test/corpus/result_handler.txt
========================
Compact Result handler
========================

fn run() {
    value :: Ok(1)
    value ? ok -> ok ! error -> error
}

---

(source_file
  (function_def
    (identifier)
    (param_list)
    (block
      (bind_stmt
        (identifier)
        (call_expr
          (type_identifier)
          (arg_list
            (integer_literal))))
      (expr_stmt
        (result_handler_expr
          (identifier)
          (identifier)
          (identifier)
          (identifier)
          (identifier))))))
