Tools/editors/tree-sitter/test/corpus/source_ref.txt
==================
Email-order source refs
==================

fn refs() {
    package :: owner/repo#version=1.2.3@github
    local :: acme/vendor/tool@source
}

---

(source_file
  (function_def
    (identifier)
    (param_list)
    (block
      (bind_stmt
        (identifier)
        (source_ref
          (ref_path_target
            (identifier)
            (ref_segment)
            (ref_version_suffix))
          (ref_target)))
      (bind_stmt
        (identifier)
        (source_ref
          (ref_path_target
            (identifier)
            (ref_segment)
            (ref_segment))
          (ref_target))))))
